@@ -11,6 +11,8 @@ ikiwiki (2.54) UNRELEASED; urgency=low
   * smileys: Some fixes for escaped smileys.
   * smileys: Note that smileys need to be double-escaped for the escaping to
     work. Markdown removes one level of escaping.
+  * Add a postscan hook.
+  * search: Use postscan hook, avoid updating index when previewing.
 
  -- Josh Triplett <josh@freedesktop.org>  Wed, 09 Jul 2008 21:30:33 -0700
 
